## Makefile.am -- Process this file with automake to produce Makefile.in
##
## Copyright (C) 2012-2016   Christopher C. Hulbert
##
## All rights reserved.
##
## Redistribution and use in source and binary forms, with or without
## modification, are permitted provided that the following conditions are met:
##
##    1. Redistributions of source code must retain the above copyright notice,
##       this list of conditions and the following disclaimer.
##
##    2. Redistributions in binary form must reproduce the above copyright
##       notice, this list of conditions and the following disclaimer in the
##       documentation and/or other materials provided with the distribution.
##
## THIS SOFTWARE IS PROVIDED BY CHRISTOPHER C. HULBERT ``AS IS'' AND ANY EXPRESS
## OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
## OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO
## EVENT SHALL CHRISTOPHER C. HULBERT OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
## INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
## (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
## LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
## ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
## (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
## SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
##

info_TEXINFOS       = matio_user_guide.texi
matio_user_guide_TEXINFOS = intro.texi quick.texi matvar_structure.texi \
                            build.texi

dist_man3_MANS  = \
    Mat_Close.3 \
    Mat_CreateVer.3 \
    Mat_GetFilename.3 \
    Mat_GetLibraryVersion.3 \
    Mat_GetVersion.3 \
    Mat_Open.3 \
    Mat_Rewind.3 \
    Mat_VarAddStructField.3 \
    Mat_VarCreate.3 \
    Mat_VarCreateStruct.3 \
    Mat_VarFree.3 \
    Mat_VarGetNumberOfFields.3 \
    Mat_VarGetStructFieldnames.3 \
    Mat_VarGetStructs.3 \
    Mat_VarGetStructsLinear.3 \
    Mat_VarRead.3 \
    Mat_VarReadInfo.3 \
    Mat_VarReadNext.3 \
    Mat_VarReadNextInfo.3 \
    Mat_VarWrite.3
