## Makefile.am -- Process this file with automake to produce Makefile.in
##
## Copyright (c) 2015-2026, The matio contributors
## Copyright (c) 2012-2014, Christopher C. Hulbert
## All rights reserved.
##
## SPDX-License-Identifier: BSD-2-Clause
##

info_TEXINFOS       = matio_user_guide.texi
matio_user_guide_TEXINFOS = intro.texi quick.texi matvar_structure.texi \
                            build.texi mcos.texi

dist_man3_MANS  = \
    Mat_Close.3 \
    Mat_CalcSingleSubscript.3 \
    Mat_CalcSingleSubscript2.3 \
    Mat_Critical.3 \
    Mat_CreateVer.3 \
    Mat_DebugMessage.3 \
    Mat_Error.3 \
    Mat_GetDir.3 \
    Mat_GetFileAccessMode.3 \
    Mat_GetFilename.3 \
    Mat_GetHeader.3 \
    Mat_GetLibraryVersion.3 \
    Mat_GetVersion.3 \
    Mat_Help.3 \
    Mat_LogClose.3 \
    Mat_LogInit.3 \
    Mat_LogInitFunc.3 \
    Mat_Message.3 \
    Mat_Open.3 \
    Mat_Rewind.3 \
    Mat_SetDebug.3 \
    Mat_SetVerbose.3 \
    Mat_SizeOf.3 \
    Mat_SizeOfClass.3 \
    Mat_VerbMessage.3 \
    Mat_VarAddStructField.3 \
    Mat_VarCreate.3 \
    Mat_VarCreateStruct.3 \
    Mat_VarCreateStruct2.3 \
    Mat_VarDelete.3 \
    Mat_VarFree.3 \
    Mat_VarGetCell.3 \
    Mat_VarGetCells.3 \
    Mat_VarGetCellsLinear.3 \
    Mat_VarGetClassName.3 \
    Mat_VarGetNumberOfFields.3 \
    Mat_VarGetSize.3 \
    Mat_VarGetStructField.3 \
    Mat_VarGetStructFieldByIndex.3 \
    Mat_VarGetStructFieldByName.3 \
    Mat_VarGetStructFieldnames.3 \
    Mat_VarSetCell.3 \
    Mat_VarSetStructFieldByIndex.3 \
    Mat_VarSetStructFieldByName.3 \
    Mat_VarGetStructs.3 \
    Mat_VarGetStructsLinear.3 \
    Mat_VarRead.3 \
    Mat_VarReadData.3 \
    Mat_VarReadDataAll.3 \
    Mat_VarReadDataLinear.3 \
    Mat_VarReadInfo.3 \
    Mat_VarReadNext.3 \
    Mat_VarReadNextInfo.3 \
    Mat_VarPrint.3 \
    Mat_VarWrite.3 \
    Mat_VarWriteData.3 \
    Mat_VarWriteInfo.3 \
    Mat_Warning.3 \
    Mat_VarWriteAppend.3
