## Makefile.am -- Process this file with automake to produce Makefile.in
##
## Copyright (c) 2015-2026, The matio contributors
## Copyright (c) 2005-2014, Christopher C. Hulbert
## All rights reserved.
##
## SPDX-License-Identifier: BSD-2-Clause
##

noinst_HEADERS      = getopt.h
noinst_LTLIBRARIES  = libgetopt.la
libgetopt_la_SOURCES = getopt_long.c
libgetopt_la_CFLAGS = -DREPLACE_GETOPT=1
